forecast-serverのレート保存処理を実装
